syntax = "proto3";

package news.v1;

option go_package = "kratos-news-system/api/news/v1;v1";

// the validate rules:
// https://github.com/envoyproxy/protoc-gen-validate
import "validate/validate.proto";
import "google/protobuf/timestamp.proto";

// The greeting service definition.
service News {
  rpc CreateArticle (CreateArticleRequest) returns (CreateArticleReply) {}

  rpc UpdateArticle (UpdateArticleRequest) returns (UpdateArticleReply) {}

  rpc DeleteArticle (DeleteArticleRequest) returns (DeleteArticleReply) {}

  rpc GetArticle (GetArticleRequest) returns (GetArticleReply) {}

  rpc ListArticle (ListArticleRequest) returns (ListArticleReply) {}

  rpc AddComment(AddCommentRequest) returns (AddCommentReply) {}

  rpc GetComments(GetCommentRequest) returns (GetCommentReply) {}

  rpc DeleteComment(DeleteCommentRequest) returns (DeleteCommentReply) {}
}

message Article {
  int64 id = 1;
  string title = 2;
  string content = 3;
  google.protobuf.Timestamp createdAt = 4;
  google.protobuf.Timestamp updatedAt = 5;
}

message CreateArticleRequest {
  string title = 1 [(validate.rules).string = {min_len: 5, max_len: 50}]; // the title of string must be between 5 and 50 character
  string content = 2;
}

message CreateArticleReply {
  Article Article = 1;
}

message UpdateArticleRequest {
  int64 id = 1 [(validate.rules).int64 = {gt: 0}];
  string title = 2 [(validate.rules).string = {min_len: 5, max_len: 50}]; // the title of string must be between 5 and 50 character;
  string content = 3;
}

message UpdateArticleReply {
  Article Article = 1;
}

message DeleteArticleRequest {
  int64 id = 1;
}
message DeleteArticleReply {
}

message GetArticleRequest {
  int64 id = 1;
}

message GetArticleReply {
  Article Article = 1;
}

message ListArticleRequest {
}

message ListArticleReply {
  repeated Article results = 1;
}

message Comment {
  int64 id = 1;
  int64 user_id = 2;
  int64 article_id = 3;
  string content = 4;
  google.protobuf.Timestamp createdAt = 5;
}

message AddCommentRequest {
  int64 user_id = 1;
  int64 article_id = 2;
  string content = 3;
}

message AddCommentReply {
  Comment comment = 1;
}

message GetCommentRequest {
  int64 article_id = 1;
}

message GetCommentReply {
  repeated Comment comment = 1;
}

message DeleteCommentRequest {
  int64 id = 1;
  int64 user_id = 2;
  int64 article_id = 3;
}

message DeleteCommentReply {
}




