syntax = "proto3";

package user.v1;

option go_package = "kratos-news-system/api/user/v1;v1";

import "google/protobuf/timestamp.proto";

// The greeting service definition.
service User {
  rpc Register (RegisterRequest) returns (UserReply) {}

  rpc Login(LoginRequest) returns (UserReply) {}

  rpc GetUserByPhone(GetUserByPhoneRequest) returns (UserReply) {}

  rpc UpdateUser(UpdateUserRequest) returns (UserReply) {}

}
message UserInfo {
  int64 id = 1;
  string username = 2;
  string phone = 3;
  string password = 4;
  google.protobuf.Timestamp createdAt = 5;
  google.protobuf.Timestamp updatedAt = 6;
}

message RegisterRequest {
  string username = 1;
  string phone = 2;
  string password = 3;
}

message UserReply {
  UserInfo user = 1;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message GetUserByPhoneRequest {
  string phone = 1;
}

message UpdateUserRequest {
  int64 id = 1;
  string username = 2;
  string phone = 3;
  string password = 4;
}




